Improving quarkus testsuite execution time
Closes #13544